# GreenGait

./: .gitignore  README.md
backend/: .gitignore  Cargo.toml
backend/src/: blockchain.rs  config.rs  main.rs  mqtt.rs  security.rs
docs/: README.md
firmware/: .gitignore  ESP32.ino  README.md  certificates.h  crypto_hmac.h
solana-program/: Anchor.toml
