[package]
name = "stepmint_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
chrono = "0.4"  # Pentru validare timestamp
dotenv = "0.15" # Ca să citești config mai ușor (opțional)
hex = "0.4"
rustls-pemfile = "1.0"
borsh = "0.10"
stepmint_program = { path = "../stepmint_program/programs/stepmint_program"}
anchor-client = "0.29.0"        # sau ultima versiune compatibilă cu Anchor-ul tău
anchor-lang = "0.29.0" 
solana-sdk = "1.18.13"
anyhow = "1.0"
solana-client = "1.18.13"

